Some minor CSS tweaks to fix alignment

--- a/themes/default/css/index.css
+++ b/themes/default/css/index.css
@@ -494,6 +494,7 @@ h2 a.collapse {
 	overflow: hidden;
 	position: relative;
 	padding: 0;
+	margin-right: 1px;
 }
 .collapse {background-position: 0 -25px;}
 .expand {background-position: -116px -25px;}
@@ -772,7 +773,7 @@ a.bbc_link {
 	-webkit-appearance: caps-lock-indicator;
 }
 #search_form {
-	padding: 12px 0 4px 8px;
+	padding: 12px 3px 4px 8px;
 	float: right;
 }
 #search_form  * {
@@ -788,7 +789,7 @@ a.bbc_link {
 /* The main title. */
 #forumtitle, .rightheader #forumtitle {
 	float: left;
-	padding: 10px 10px 6px 8px;
+	padding: 10px 10px 6px 13px;
 	font-size: 2.357em;
 	line-height: 1.455em;
 }
@@ -839,6 +840,7 @@ a.bbc_link {
 #news {
 	vertical-align: top;
 	padding: 0 0 1em 0;
+	margin-left: -1px;
 }
 #news .bbc_link {
 	display: inline;
@@ -1608,7 +1610,7 @@ dl.settings label {
 }
 /* The posting icons and mark read button. */
 #posting_icons {
-	margin: 0 4px 20px 4px;
+	margin: 0 0 20px 4px;
 }
 #posting_icons p {
 	display: table-cell;
